--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,40 @@
+apiclient==1.0.3
+asn1crypto==0.23.0
 Babel==2.5.3
-certifi==2018.1.18
+bdist-mpkg==0.5.0
+beautifulsoup4==4.6.0
+bonjour-py==0.3
+certifi==2017.7.27.1
+cffi==1.11.2
 chardet==3.0.4
+click==6.7
+enum34==1.1.6
+Flask==0.12.2
 idna==2.6
-imutils==0.4.6
-numpy==1.14.0
-opencv-python==3.4.0.12
-pandas==0.22.0
-python-dateutil==2.6.1
-pytz==2017.3
-six==1.11.0
+ipaddress==1.0.18
+itsdangerous==0.24
+Jinja2==2.10
+MarkupSafe==1.0
+matplotlib==1.3.1
+modulegraph==0.10.4
+numpy==1.8.0rc1p
+olefile==0.44
+Pillow==4.2.1
+py2app==0.7.3
+pycparser==2.18
+pyOpenSSL==17.3.0
+pyparsing==2.0.1
+python-dateutil==1.5
+pytz==2013.7
+requests==2.18.4
+scipy==0.13.0b1
+selenium==3.5.0
+six==1.4.1
+SQLAlchemy==1.1.15
+sqlparse==0.2.4
+termcolor==1.1.0
+twilio==6.8.4
+typing==3.6.4
+urllib3==1.22
+webkit2png==0.8.2
+Werkzeug==0.12.2
